Add Jetty 10 support (#71)
* Add Jetty-10 support and upgrade to Jetty 9.4.x

Signed-off-by: Olivier Lamy <olamy@apache.org>

* Fix the issue with jboss-el-api_3.0_spec not resolving during artifact deployment.

Co-authored-by: Scott M Stark <starksm@starkinternational.com>